# kill_open_programs

./: Cargo.toml  spawn.ps1
.github/workflows/: lint-format.yml  release.yml  tests.yml
src/: exit_codes.rs  finder.rs  main.rs  parser.rs  prelude.rs  utils.rs
